# MediaSDK

./: mfxconfig.h.in
_studio/mfx_lib/encode_hw/h264/src/: mfx_h264_encode_hw.cpp
_studio/mfx_lib/genx/: CMakeLists.txt
_studio/mfx_lib/genx/asc/src/: genx_scd.cpp
_studio/mfx_lib/genx/mctf/src/: embed_isa.c
_studio/mfx_lib/mctf_package/mctf/include/: mctf_common.h
builder/: ConfTargets.cmake
